# oaknut

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md.j2  afs-implementation-plan.md  afs-onwire.md  afs-proposal.md  cli-design.md  cli-reference.rst  cli.rst  conf.py  cookbook.rst  index.rst  monorepo.md
docs/readme_examples/: dfs_quickstart.py  file_metadata.py
scripts/: check_no_namespace_init.sh  compare_wfsinit.py  render_readme.py
tests/: fixtures.py
tests/data/images/l3fs/: l3fs-wfsinit.dsc
