# oaknut — workspace root.
#
# This pyproject.toml serves two purposes:
#
# 1. It declares the uv workspace that stitches together the
#    packages/oaknut-* members into a single development environment.
#
# 2. It defines an optional `oaknut` meta-distribution on PyPI whose
#    only job is to depend on every family member, so `pip install
#    oaknut` is a one-shot install of the whole suite. Publishing it
#    also claims the bare `oaknut` name on PyPI before anyone else.
#
# All packages in packages/ contribute to a single PEP 420 implicit
# namespace package (`oaknut`). No package ever ships
# src/oaknut/__init__.py — that is enforced by scripts/check_no_namespace_init.sh
# which runs both locally via pre-commit and in CI.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oaknut"
version = "10.2.0"
requires-python = ">=3.11"
description = "Oaknut family meta-distribution — tools for Acorn computer filesystems, files, and formats."
readme = "README.md"
license = "MIT"
authors = [{ name = "Robert Smallshire", email = "robert@smallshire.org.uk" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "oaknut-file>=10.0",
    "oaknut-discimage>=10.0",
    "oaknut-basic>=10.0",
    "oaknut-dfs>=10.0",
    "oaknut-adfs>=10.0",
    "oaknut-afs>=10.0",
    "oaknut-zip>=10.0",
    "oaknut-disc>=10.0",
]

[project.urls]
Homepage = "https://github.com/rob-smallshire/oaknut"
Repository = "https://github.com/rob-smallshire/oaknut"
Issues = "https://github.com/rob-smallshire/oaknut/issues"

[tool.setuptools]
# The meta-distribution itself ships no code — only dependencies.
packages = []

[tool.uv.workspace]
members = ["packages/oaknut-*"]

[tool.uv.sources]
oaknut-file  = { workspace = true }
oaknut-discimage = { workspace = true }
oaknut-basic = { workspace = true }
oaknut-dfs   = { workspace = true }
oaknut-adfs  = { workspace = true }
oaknut-afs   = { workspace = true }
oaknut-zip   = { workspace = true }
oaknut-disc  = { workspace = true }

[tool.uv]
default-groups = ["test", "lint", "dev"]

[dependency-groups]
test = [
    "pytest>=8.3",
    "pytest-cov>=5",
]
lint = [
    "ruff>=0.9",
]
dev = [
    "pre-commit>=3",
    "bump-my-version>=0.28",
    "jinja2>=3.1",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.1",
    "sphinx-click>=6.0",
    "sphinx-copybutton>=0.5",
]

[tool.bumpversion]
current_version = "10.2.0"
commit = true
tag = true
tag_name = "v{new_version}"
message = "Bump oaknut to {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "packages/oaknut-file/src/oaknut/file/__init__.py"

[[tool.bumpversion.files]]
filename = "packages/oaknut-discimage/src/oaknut/discimage/__init__.py"

[[tool.bumpversion.files]]
filename = "packages/oaknut-basic/src/oaknut/basic/__init__.py"

[[tool.bumpversion.files]]
filename = "packages/oaknut-dfs/src/oaknut/dfs/__init__.py"

[[tool.bumpversion.files]]
filename = "packages/oaknut-adfs/src/oaknut/adfs/__init__.py"

[[tool.bumpversion.files]]
filename = "packages/oaknut-afs/src/oaknut/afs/__init__.py"

[[tool.bumpversion.files]]
filename = "packages/oaknut-zip/src/oaknut/zip/__init__.py"

[[tool.bumpversion.files]]
filename = "packages/oaknut-disc/src/oaknut/disc/__init__.py"

[tool.pytest.ini_options]
# importlib mode is required for PEP 420 namespace packages. The
# default prepend mode collides with sibling packages that contribute
# to the same namespace — they stop resolving each other.
minversion = "8.0"
addopts = ["--import-mode=importlib"]
testpaths = [
    "packages/oaknut-file/tests",
    "packages/oaknut-discimage/tests",
    "packages/oaknut-basic/tests",
    "packages/oaknut-dfs/tests",
    "packages/oaknut-adfs/tests",
    "packages/oaknut-afs/tests",
    "packages/oaknut-zip/tests",
    "packages/oaknut-disc/tests",
]
# The workspace-root tests/ directory holds shared test data and a
# tiny tests/fixtures.py module consumed by every package's conftest.
# It is intentionally *not* in testpaths — pytest should discover no
# test files there.
norecursedirs = ["tests/data"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
